<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhereInTheWorld</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_logout">Logout</string>
    <string name="action_add">Add</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_to_do">ToDoActivity</string>
    <string name="first_last_name">First Last Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="new_account">Create New Account</string>
    <string name="title_activity_apps">AppsActivity</string>
    <string name="menu_view_all">View All</string>
    <string name="menu_view_favories">View Favorites</string>
    <string name="menu_clear_favorites">Clear Favorites</string>
    <string name="menu_view_shared">View Shared</string>
    <string name="menu_add">Add</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_preview">Preview Activity</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="app_title">WHERE IN THE WORLD??</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="APP_ID">1815512232006676</string>
    <string name="myProfileButtonName">My Profile</string>
    <string name="highScoresButtonName">High Scores</string>
    <string name="submitQnsButtonName">Submit Questions</string>
    <string name="playButtonName">Play</string>
    <string name="playGameTitle">Play Game !!!</string>
    <string name="settingsTitle">Settings - Game Type</string>
    <string name="queryTitle">Where in the </string>
    <string name="playButtonString">Play</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="buttonNext">Next</string>
    <string name="buttonPrevious">Previous</string>
     <string name="new_question_hint">What is the question?  Be creative, the only restriction is that the answer has to be the name of a country!</string>
    <string name="new_answer_hint">What is the answer?</string>
    <string name="score">Score</string>
    <string name="MyProfilePageTitle">My Profile</string>
    
    <string name="HighScoresTitle">High Scores</string>
    

</resources>
