<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.inclass10.SignUpFragment" >

    <!-- TODO: Update blank fragment layout -->

   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextFirstName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/email" android:inputType="textEmailAddress">

    </EditText>
       
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />
    
    
    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPasswordConfirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/signup" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonSignup"
        android:layout_below="@+id/buttonSignup"
        android:text="@string/cancel" />

    

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"        
        android:ems="10"
        android:hint="@string/first_last_name"
        android:inputType="textPersonName" />
    
    
    
    </RelativeLayout>

</FrameLayout>
