<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.whereintheworld.MenuFragment" >

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/buttonMyProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/myProfileButtonName" />

    <Button
        android:id="@+id/buttonHighScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/highScoresButtonName" />

    <Button
        android:id="@+id/buttonSubmitQns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/submitQnsButtonName" />

	<Button
	    android:id="@+id/buttonPlay"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginBottom="15dp"
	    android:layout_marginTop="15dp"
	    android:text="@string/playButtonName" />

</LinearLayout>
